--- a/block-BNaacs/package.json
+++ b/block-BNaacs/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "",
   "scripts": {
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "start": "node school.js"
   },
   "author": "AltCampus",
   "license": "GNU GPL V3",
   "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
     "jest": "^26.0.1"
   }
 }
