--- a/block-BNaacs/package.json
+++ b/block-BNaacs/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "test": "jest --passWithNoTests",
-    "start": "node school.js"
+    "start": "node app.js"
   },
   "author": "AltCampus",
   "license": "GNU GPL V3",
